magenta wrap to bug track

--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -80,6 +80,7 @@ a:hover small {
   width:1000px;
   padding: 20px;
   margin:0 auto;
+  outline-color: magenta;
 }
 
 blockquote {
@@ -247,7 +248,7 @@ footer {
   section {
     border:1px solid #e5e5e5;
     border-width:1px 0;
-    padding:50px;
+    padding:50px 0;
     margin:0 0 20px;
   }
 
@@ -282,7 +283,7 @@ footer {
 
 @media print, screen and (max-width: 480px) {
   body {
-    padding:15px;
+    padding:115px;
   }
 
   .downloads {
